# CNCSharp

./: LICENSE  README.md
backend/: CMakeLists.txt  README.md
backend/include/cncsharp/: communication.hpp  ir.hpp  logger.hpp  marlin_commands.hpp
backend/open_source/: README.md  grbl_interface.cpp  grbl_interface.hpp  marlin_interface.cpp  marlin_interface.hpp
backend/protected/: README.md  siemens_interface.hpp
backend/src/: communication.cpp  generator.cpp  marlin_commands.cpp
backend/src/src/: generator.cpp
docs/: marlin_gcode_command_list.md  marlin_gcode_overview.md
gui/: README.md
parser/: Cargo.toml
parser/src/: ir.rs  lib.rs  parser.rs
