[package]
name = "parser"
version = "0.1.0"
edition = "2021"
description = "CNCSharp parser and intermediate representation"
license = "MIT"
authors = ["Brian Kennally"]

[dependencies]
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
